Fixed the issue of long-press and vibration on mobile, blocking translators in 2 ways, now the website is blurry when it is not in focus

--- a/sass/abstracts/_helpers.scss
+++ b/sass/abstracts/_helpers.scss
@@ -42,3 +42,11 @@ $colors: purple, orange, blue;
     // display: none;
   }
 }
+
+.blurred {
+  filter: blur(0.8rem);
+  transition: 0.25s;
+  will-change: filter;
+  overflow-x: hidden;
+  pointer-events: none;
+}
